Projects/3-video-streaming-app/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-ingress
  namespace: video-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: video.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /video
            pathType: Prefix
            backend: 
              service: 
                name: video-service
                port:
                  number: 3005
          - path: /upload
            pathType: Prefix
            backend:  
              service:
                name: upload-service
                port: 
                  number: 3004
